--- a/index.html
+++ b/index.html
@@ -10,7 +10,63 @@
     <canvas id="myCanvas" height="500" width="500" style="border:2px solid;">
         <!-- <canvas id="red" height="100" width="100" style="border:1px solid; "></canvas> -->
     </canvas>
-    
+    <!-- two line -->
+    <script>
+         var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(233, 500);
+        ctx.lineTo(233, 0);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+       var ctx = canvas.getContext("2d");
+       // the triangle
+       ctx.beginPath();
+       ctx.moveTo(266, 500);
+       ctx.lineTo(266, 0);
+       ctx.closePath();
+
+       // the outline
+       ctx.lineWidth = 1;
+       ctx.strokeStyle = '#000000';
+       ctx.stroke();
+   </script>
+   <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(500, 233);
+        ctx.lineTo(0, 233);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+   <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(500, 266);
+        ctx.lineTo(0, 266);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
     <script>
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
@@ -23,12 +79,313 @@
 
         // the outline
         ctx.lineWidth = 1;
-        ctx.strokeStyle = '#666666';
+        ctx.strokeStyle = '#000000';
         ctx.stroke();
 
         // the fill color
         ctx.fillStyle = "#FF0000";
         ctx.fill();
+    </script>
+    <!-- in small midle line -->
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 33);
+        ctx.lineTo(200, 33);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 66);
+        ctx.lineTo(200, 66);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 99);
+        ctx.lineTo(200, 99);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 133);
+        ctx.lineTo(200, 133);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 166);
+        ctx.lineTo(200, 166);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <!-- complete green home path -->
+    <!-- in small midle line for blue-->
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 333);
+        ctx.lineTo(200, 333);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 366);
+        ctx.lineTo(200, 366);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 400);
+        ctx.lineTo(200, 400);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 433);
+        ctx.lineTo(200, 433);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 466);
+        ctx.lineTo(200, 466);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <!-- complete green home path -->
+    <!-- small line for yellow -->
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(466, 300);
+        ctx.lineTo(466, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(433, 300);
+        ctx.lineTo(433, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(400, 300);
+        ctx.lineTo(400, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(366, 300);
+        ctx.lineTo(366, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(333, 300);
+        ctx.lineTo(333, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <!-- small line for red -->
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(166, 300);
+        ctx.lineTo(166, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(133, 300);
+        ctx.lineTo(133, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(100, 300);
+        ctx.lineTo(100, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(66, 300);
+        ctx.lineTo(66, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(33, 300);
+        ctx.lineTo(33, 200);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
+    </script>
+    <!-- complete small line red -->
+    <script>
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+        // the triangle
+        ctx.beginPath();
+        ctx.moveTo(300, 299);
+        ctx.lineTo(200, 299);
+        ctx.closePath();
+
+        // the outline
+        ctx.lineWidth = 1;
+        ctx.strokeStyle = '#000000';
+        ctx.stroke();
     </script>
     <script>
         var canvas = document.getElementById("myCanvas");
@@ -42,7 +399,7 @@
 
         // the outline
         ctx.lineWidth = 1;
-        ctx.strokeStyle = '#666666';
+        ctx.strokeStyle = '#000000';
         ctx.stroke();
 
         // the fill color
@@ -61,7 +418,7 @@
 
         // the outline
         ctx.lineWidth = 1;
-        ctx.strokeStyle = '#666666';
+        ctx.strokeStyle = '#000000';
         ctx.stroke();
 
         // the fill color
@@ -80,7 +437,7 @@
 
         // the outline
         ctx.lineWidth = 1;
-        ctx.strokeStyle = '#666666';
+        ctx.strokeStyle = '#000000';
         ctx.stroke();
 
         // the fill color
